read file is working
